@@ -1,6 +1,11 @@
 2010-03-22  Jakub Jelinek  <jakub@redhat.com>
 
 	Backport from mainline:
+	2010-03-19  Michael Matz  <matz@suse.de>
+
+	PR target/43305
+	* gcc.dg/pr43305.c: New testcase.
+
 	2010-03-18  Michael Matz  <matz@suse.de>
 
 	PR middle-end/43419
