@@ -1,6 +1,13 @@
 2010-03-22  Jakub Jelinek  <jakub@redhat.com>
 
 	Backport from mainline:
+	2010-03-19  Michael Matz  <matz@suse.de>
+
+	PR target/43305
+	* builtins.c (expand_builtin_interclass_mathfn,
+	expand_builtin_signbit): Use maybe_emit_unop_insn, emit libcalls
+	if that fails.
+
 	2010-03-18  Michael Matz  <matz@suse.de>
 
 	PR middle-end/43419
